# ytAutoAgent

./: .env.example  .gitignore  README.md  pyproject.toml
app/: cli.py  config.py  errors.py  main.py  models.py
app/services/: downloader.py  frame_extractor.py  image_generation.py  image_generation_manager.py  job_manager.py  media_probe.py  pipeline.py  pipeline_common.py  pipeline_stage1.py  pipeline_stage2.py  pipeline_stage3.py  pipeline_stage4.py  pipeline_stage5.py  providers.py  scene_detection.py  store.py
app/tools/: __init__.py  repair_job_outputs.py  run_pipeline_with_llm_review.py  test_tabcode_image.py
dosc/: V4.2 架构师提示词.md  图片、视频生成实现.md  当前算法Stage与JSON Schema梳理.md  现状流程图与数据结构.md  算法完整实现.md  算法实现.md
tests/: conftest.py  helpers.py  test_api_validation.py  test_cli.py  test_gemini_openrouter.py  test_image_generation_api.py  test_image_generation_service.py  test_pipeline_and_states.py
tmp/manual_refname_checks/a/jobs/task_weight_loss/: 01_physical_manifest.json  02_raw_scene_descriptions.json  03_character_bank.json  04_normalized_scene_descriptions.json  05_final_production_table.json  final_prompts.md  index.json
